# Surya-OCR-PRO

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.jules/: bolt.md
models/: modeling_deepseekocr.py  modeling_deepseekv2.py
scripts/: benchmark_deepseek.py  download_model.py
src/deepseek_ocr/: __init__.py  __main__.py  cli.py  config.py
src/deepseek_ocr/engine/: image_extractor.py  model_loader.py  ocr_engine.py  pdf_handler.py  text_postprocessor.py
src/deepseek_ocr/gui/: app.py  pdf_preview.py
src/deepseek_ocr/pipeline/: orchestrator.py
src/deepseek_ocr/utils/: device.py  logging_setup.py
src/surya_ocr/: __init__.py  __main__.py  cli.py  config.py
src/surya_ocr/engine/: model_loader.py  pdf_handler.py
src/surya_ocr/gui/: app.py  pdf_preview.py
src/surya_ocr/output/: __init__.py  writer_base.py  writer_docx.py  writer_markdown.py  writer_txt.py
src/surya_ocr/pipeline/: checkpoint.py  progress.py
src/surya_ocr/utils/: paths.py
tests/: conftest.py  test_checkpoint.py  test_cli.py  test_config.py  test_image_extractor.py  test_output_writers.py  test_pdf_handler.py  test_text_postprocessor.py
